Crate important classes for tank and tests
crate tank, tankMovement, tankHealth and tankArmor
create scriptableObject for tank
create tests for tank and testHelpterClass

--- a/Game/Assets/Scripts/Game/Entity/GameEntity.asmdef
+++ b/Game/Assets/Scripts/Game/Entity/GameEntity.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "GamePlayer"
+    "name": "GamePlayer",
+    "rootNamespace": "",
+    "references": [
+        "GUID:c7d5c41f01000994684e3715c9e28c12"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
