--- a/Game/Assets/Scripts/Game/Entity/GameEntity.asmdef
+++ b/Game/Assets/Scripts/Game/Entity/GameEntity.asmdef
@@ -2,7 +2,8 @@
     "name": "GamePlayer",
     "rootNamespace": "",
     "references": [
-        "GUID:c7d5c41f01000994684e3715c9e28c12"
+        "GUID:c7d5c41f01000994684e3715c9e28c12",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
