create healthClass for tanks and tests

--- a/Game/Assets/Scripts/Tests/EditMode/Tests_EditMode.asmdef
+++ b/Game/Assets/Scripts/Tests/EditMode/Tests_EditMode.asmdef
@@ -5,7 +5,9 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "Magic",
-        "Tests"
+        "Tests",
+        "Game",
+        "GamePlayer"
     ],
     "includePlatforms": [
         "Editor"
