--- a/Game/Assets/Scripts/Game/AI/Game_AI.asmdef
+++ b/Game/Assets/Scripts/Game/AI/Game_AI.asmdef
@@ -1,11 +1,9 @@
 {
-    "name": "Tests",
+    "name": "Game_AI",
     "rootNamespace": "",
     "references": [
         "GUID:c7d5c41f01000994684e3715c9e28c12",
-        "GUID:2a50582dd30ca6240972d88269b219a4",
-        "GUID:1f0d738c06f8dce4ba438abe70565995",
-        "GUID:5040043ffe4343a458cef930ecd53a0c"
+        "GUID:2a50582dd30ca6240972d88269b219a4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
