--- a/Game/Assets/Scripts/Tests/EditMode/Tests_EditMode.asmdef
+++ b/Game/Assets/Scripts/Tests/EditMode/Tests_EditMode.asmdef
@@ -7,7 +7,8 @@
         "Magic",
         "Tests",
         "Game",
-        "GamePlayer"
+        "GamePlayer",
+        "Game_AI"
     ],
     "includePlatforms": [
         "Editor"
