--- a/Game/Assets/Scripts/Tests/PlayMode/Tests_PlayMode.asmdef
+++ b/Game/Assets/Scripts/Tests/PlayMode/Tests_PlayMode.asmdef
@@ -7,7 +7,8 @@
         "Tests",
         "Magic",
         "Game",
-        "GamePlayer"
+        "GamePlayer",
+        "Game_AI"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
