--- a/Game/Assets/Scripts/Tests/TestPlayMode/Tests_PlayMode.asmdef
+++ b/Game/Assets/Scripts/Tests/TestPlayMode/Tests_PlayMode.asmdef
@@ -8,7 +8,7 @@
         "Magic",
         "Game",
         "GamePlayer",
-        "Game_AI"
+        "GameScriptableObject"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
