--- a/Game/Assets/Scripts/Tests/TestEditMode/Tests_EditMode.asmdef
+++ b/Game/Assets/Scripts/Tests/TestEditMode/Tests_EditMode.asmdef
@@ -8,7 +8,7 @@
         "Tests",
         "Game",
         "GamePlayer",
-        "Game_AI"
+        "GameScriptableObject"
     ],
     "includePlatforms": [
         "Editor"
